# memarena

./: .env.example  .gitignore  LICENSE  NAMECHECK.md  NOTICE  README.md  REVIEW.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml
calibration/: rubric.v1.md
configs/: pricing.yaml  run.day2_v2.yaml  run.day3_v1.yaml  smoke.yaml
configs/judges/: judge.v1.yaml
configs/providers/: baseline.yaml  letta.default.yaml  mem0.default.yaml  mem0.platform.yaml  zep.cloud.yaml  zep.default.yaml
datasets/: LICENSES.md
docs/: METHODOLOGY_NOTES.md
prompts/: judge_abstention.v1.md  judge_answer_correctness.v1.md  judge_evidence_coverage.v1.md
results/day3-v1-four-providers/: RESULTS.md  baseline_rag__longmemeval_v1__journal.jsonl  baseline_rag__longmemeval_v1__repass__journal.jsonl  letta__longmemeval_v1__journal.jsonl  letta__longmemeval_v1__repass__journal.jsonl  mem0__longmemeval_v1__addlatency_n15__journal.jsonl  mem0__longmemeval_v1__journal.jsonl  mem0__longmemeval_v1__repass__journal.jsonl  (+3 more)
scripts/: day3_latency_repass.py  day3_results_summary.py  day4_build_labeling_sheet.py  day4_compute_kappa.py  day4_generate_answers.py  day4_run_judges.py
tests/: test_agreement.py  test_answering.py  test_baseline_rag.py  test_cache.py  test_cli.py  test_config.py  test_datasets.py  test_judge.py  test_letta_adapter.py  test_longmemeval_v1.py  test_longmemeval_v2.py  test_mem0_adapter.py  test_metrics_deterministic.py  test_metrics_fixtures.py  test_providers_base.py  test_registry.py  test_runner.py  test_sampling.py  test_stats_buckets.py  test_zep_adapter.py
(+27 files in other folders)
