[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memarena"
version = "0.1.0"
description = "Neutral benchmark harness and public leaderboard for AI agent memory systems."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Sebastian Tirelli" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "httpx>=0.27",
    "tenacity>=8.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "mem0ai==2.0.11",
]

[project.urls]
Homepage = "https://github.com/stirelli/memarena"

[project.scripts]
memarena = "memarena.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/memarena"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
